fix spacing

--- a/src/app/pages/main/returns/return-section/return-table/return-table.component.scss
+++ b/src/app/pages/main/returns/return-section/return-table/return-table.component.scss
@@ -24,7 +24,8 @@
   }
 
   .action-btn {
-    padding: 6px;
+    padding-top: 6px;
+    padding-left: 6px;
     button {
       border-radius: 5px;
       font-size: 14px;
